--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Mobile -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="" sizes="30x30" />
