--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="keywords" content="">
 
     <!-- Mobile -->
-    <meta name="mobile-web-app-capable" content="yes">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="mobile-web-app-capable" content="yes"> -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="" sizes="30x30" />
@@ -37,9 +37,6 @@
         </div>
         <div id="text-wrapper" class="q-2" data-w="" data-h="" data-quality="2">
             <div id="header" data-h="" data-w="">
-                <!-- <p>LQ</p>
-                <p>NQ</p>
-                <p>HQ</p> -->
             </div>
             <div id="side" data-quality="2" data-w="" data-h="" data-left="" data-top="">
                 <div class="quality-options">
@@ -47,6 +44,9 @@
                     <p id="lq" class="quality" data-quality="1">LQ</p>
                     <p id="nq" class="quality active" data-quality="2">NQ</p>
                     <p id="hq" class="quality" data-quality="3">HQ</p>
+                </div>
+                <div class="toggle-grid">
+                    <p id="grid">XX</p>
                 </div>
             </div>
             <div id="footer" data-w="" data-h="">
