Changed variable styling through JS

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="keywords" content="">
 
     <!-- Mobile -->
-    <!-- <meta name="mobile-web-app-capable" content="yes"> -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="" sizes="30x30" />
@@ -35,19 +35,20 @@
         <div id="bg-cont" class="q-2" data-quality="2">
             <p id="measure"></p>
         </div>
-        <div id="text-wrapper" class="q-2" data-w="" data-h="" data-quality="2">
+        <div id="text-wrapper" class="q-2" data-quality="2">
             <div id="header" data-h="" data-w="">
+                <!-- <p></p> -->
             </div>
-            <div id="side" data-quality="2" data-w="" data-h="" data-left="" data-top="">
+            <div id="side" data-quality="2">
                 <div class="quality-options">
                     <p>Q:</p>
                     <p id="lq" class="quality" data-quality="1">LQ</p>
                     <p id="nq" class="quality active" data-quality="2">NQ</p>
                     <p id="hq" class="quality" data-quality="3">HQ</p>
                 </div>
-                <div class="toggle-grid">
+                <!-- <div class="toggle-grid">
                     <p id="grid">XX</p>
-                </div>
+                </div> -->
             </div>
             <div id="footer" data-w="" data-h="">
                 <p>
