--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p id="measure"></p>
         </div>
         <div id="text-wrapper" class="q-2" data-quality="2">
-            <div id="header" data-h="" data-w="">
+            <div id="header">
                 <!-- <p></p> -->
             </div>
             <div id="side" data-quality="2">
@@ -50,7 +50,7 @@
                     <p id="grid">XX</p>
                 </div> -->
             </div>
-            <div id="footer" data-w="" data-h="">
+            <div id="footer">
                 <p>
 
                 </p>
