Added grid toggle

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
             </div>
             <div id="side" data-quality="2">
                 <div class="quality-options">
-                    <p>Q:</p>
+                    <p class="nav-heading">Q:</p>
                     <p id="lq" class="quality" data-quality="1">LQ</p>
                     <p id="nq" class="quality active" data-quality="2">NQ</p>
                     <p id="hq" class="quality" data-quality="3">HQ</p>
                 </div>
-                <!-- <div class="toggle-grid">
+                <div id="toggle-grid">
                     <p id="grid">XX</p>
-                </div> -->
+                </div>
             </div>
             <div id="footer">
                 <p>
@@ -60,11 +60,12 @@
                     How does a graphic designer make decisions when we are all using the same tools and visual references? This research explores and explicates a ‘knowingly wrong’ approach that fuses traditional mastery (that of knowing) with unconventional techniques, processes and outcomes (that of wrongness) to enable innovation within the discipline. This research offers an alternative approach to graphic design practice. My practice of 20 years is the primary object of this study, examined through a reflective approach. This research is not a comprehensive taxonomy of every aspect of my multi-layered practice. It doesn’t cover my teaching, or business processes in my practice, such as finding new work. I have identified certain aspects of my practice that are the most unique and most worthy of reflection and explication. Key practice inquiries have been identified: type design without designing type, typography, a dialogue with the printing press, sampling, and the workmanship of risk in (and as) the design and print production process. These themes are tackled from theoretical, historical and reflective viewpoints. I have undertaken interviews with key practitioners and historical figures to address gaps in the literature. This research has enabled me to understand my practice and articulate this to others. The key contribution of the research is the concept of ‘knowing wrongness’: this is an approach to making decisions that creates work that is aesthetically and conceptually different to mainstream graphic design. Graphic design is becoming more and more automated, with software that is better designed and easier to use, yet typographic standards are degenerating. I argue that traditional typographic knowledge combined with intentionally unconventional approaches –knowing wrongness –keeps the role of the graphic designer alive in the face of increasing automation in the disciplineX
                 </p> -->
                 <p>
-                    This screen fits a total of:<br>
+                    Typeset in Courier New at <span id="font-size"></span> pixels (px):<br><br>
+                    This screen can fit a total of<br>
                     <span id="char-no"></span> characters<br>
                     <span id="line-no"></span> lines &amp;<br>
                     <span id="cpl"></span> characters per line<br><br>
-                    The content area fits a total of:<br>
+                    This content area can fit a total of<br>
                     <span id="content-char-no"></span> characters<br>
                     <span id="content-line-no"></span> lines &amp;<br>
                     <span id="content-cpl"></span> characters per line
