--- a/index.html
+++ b/index.html
@@ -55,20 +55,47 @@
 
                 </p>
             </div>
-            <div id="body-text" data-quality="2">
+            <div id="body-text" class="char-info" data-quality="2">
                 <!-- <p>
                     How does a graphic designer make decisions when we are all using the same tools and visual references? This research explores and explicates a ‘knowingly wrong’ approach that fuses traditional mastery (that of knowing) with unconventional techniques, processes and outcomes (that of wrongness) to enable innovation within the discipline. This research offers an alternative approach to graphic design practice. My practice of 20 years is the primary object of this study, examined through a reflective approach. This research is not a comprehensive taxonomy of every aspect of my multi-layered practice. It doesn’t cover my teaching, or business processes in my practice, such as finding new work. I have identified certain aspects of my practice that are the most unique and most worthy of reflection and explication. Key practice inquiries have been identified: type design without designing type, typography, a dialogue with the printing press, sampling, and the workmanship of risk in (and as) the design and print production process. These themes are tackled from theoretical, historical and reflective viewpoints. I have undertaken interviews with key practitioners and historical figures to address gaps in the literature. This research has enabled me to understand my practice and articulate this to others. The key contribution of the research is the concept of ‘knowing wrongness’: this is an approach to making decisions that creates work that is aesthetically and conceptually different to mainstream graphic design. Graphic design is becoming more and more automated, with software that is better designed and easier to use, yet typographic standards are degenerating. I argue that traditional typographic knowledge combined with intentionally unconventional approaches –knowing wrongness –keeps the role of the graphic designer alive in the face of increasing automation in the disciplineX
                 </p> -->
                 <p>
-                    Typeset in Courier New at <span id="font-size"></span> pixels (px):<br><br>
-                    This screen can fit a total of<br>
-                    <span id="char-no"></span> characters<br>
-                    <span id="line-no"></span> lines &amp;<br>
-                    <span id="cpl"></span> characters per line<br><br>
-                    This content area can fit a total of<br>
+                    Everything in this website is typeset in Courier New at a font size of:<br>
+                    <span id="font-size"></span> pixels (px)
+                </p>
+                <p>
+                    As a monospaced typeface, any character typeset in Courier New keeps to same the character width. At a font size of 16 px, any character keeps to the following dimensions:<br>
+                    <span id="char-w"></span> px W × <span id="char-h"></span> px H
+                </p>
+                <p>
+                    The dimensions of this window screen are:<br>
+                    <span id="win-w"></span> px W × <span id="win-h"></span> px H
+                </p>
+                <p>
+                    At these dimensions, this screen can fit a total of:<br>
+                    <span id="char-no"></span>  characters<br>
+                    <span id="line-no"></span> lines<br>
+                    <span id="cpl"></span> characters per line
+                </p>
+                <p>
+                    This content area then, has been designated to fit a total of:<br>
                     <span id="content-char-no"></span> characters<br>
-                    <span id="content-line-no"></span> lines &amp;<br>
+                    <span id="content-line-no"></span> lines<br>
                     <span id="content-cpl"></span> characters per line
+                </p>
+                <p>
+                    To have typography precisely fit the dimensions of this screen, Courier New at 16 px has been typeset in the following CSS values:<br>
+                    <span id="line-h"></span> px line height<br>
+                     <span id="letter-sp"></span> px letter spacing
+                </p>
+                <!-- <p>
+                    If sub-pixel rendering is enabled, every line and every whitespace becomes a factor of the character width and cap height of Courier New.
+                </p> -->
+                <p>
+                    With all these dimensions and values at play (and if the browser renders to the sub-pixel) white space matches the monospace.
+                </p>
+                <p>
+                    With this, we can reach true monospace.
                 </p>
             </div>
         </div>
