250924-2_Added more writing

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
                     <span id="font-size"></span> pixels (px)
                 </p>
                 <p>
-                    As a monospaced typeface, any character typeset in Courier New keeps to same the character width. At a font size of 16 px, any character keeps to the following dimensions:<br>
+                    As a monospaced typeface, any character typeset in Courier New keeps to the same character width. 
+                </p>
+                <p>
+                    At a font size of <span id="font-size"></span> px, any character has the following dimensions:<br>
                     <span id="char-w"></span> px W × <span id="char-h"></span> px H
                 </p>
                 <p>
