--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     As a monospaced typeface, any character typeset in Courier New keeps to the same character width. 
                 </p>
                 <p>
-                    At a font size of <span id="font-size"></span> px, any character has the following dimensions:<br>
+                    At the font size above, any character has the following dimensions:<br>
                     <span id="char-w"></span> px W × <span id="char-h"></span> px H
                 </p>
                 <p>
