--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <span id="content-cpl"></span> characters per line
                 </p>
                 <p>
-                    To have typography precisely fit the dimensions of this screen, Courier New at 16 px has been typeset in the following CSS values:<br>
+                    To have typography precisely fit the dimensions of this screen, Courier New at the font size above has been typeset in the following CSS values:<br>
                     <span id="line-h"></span> px line height<br>
                      <span id="letter-sp"></span> px letter spacing
                 </p>
@@ -95,7 +95,7 @@
                     If sub-pixel rendering is enabled, every line and every whitespace becomes a factor of the character width and cap height of Courier New.
                 </p> -->
                 <p>
-                    With all these dimensions and values at play (and if the browser renders to the sub-pixel) white space matches the monospace.
+                    With all these dimensions and values at play (and if the browser renders to the sub-pixel) white space can match the monospace.
                 </p>
                 <p>
                     With this, we can reach true monospace.
