--- a/index.html
+++ b/index.html
@@ -91,14 +91,11 @@
                     <span id="line-h"></span> px line height<br>
                      <span id="letter-sp"></span> px letter spacing
                 </p>
-                <!-- <p>
-                    If sub-pixel rendering is enabled, every line and every whitespace becomes a factor of the character width and cap height of Courier New.
-                </p> -->
                 <p>
                     With all these dimensions and values at play (and if the browser renders to the sub-pixel) white space can match the monospace.
                 </p>
                 <p>
-                    With this, we can reach true monospace.
+                    With this, we have reached true monospace.
                 </p>
             </div>
         </div>
