--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     With all these dimensions and values at play (and if the browser renders to the sub-pixel) white space can match the monospace.
                 </p>
                 <p>
-                    With this, we have reached true monospace.
+                    We have reached true monospace.
                 </p>
             </div>
         </div>
