--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <span id="content-cpl"></span> characters per line
                 </p>
                 <p>
-                    To have typography precisely fit the dimensions of this screen, Courier New at the font size above has been typeset in the following CSS values:<br>
+                    To have type fit, precisely, the dimensions of this screen, Courier New at the font size above has been typeset in the following CSS values:<br>
                     <span id="line-h"></span> px line height<br>
                      <span id="letter-sp"></span> px letter spacing
                 </p>
